tests/NormalTests/paczka1/small_fuzzy/93002906.err
Error in line 5: jEcHpq7Eu S406 49,2
Error in line 9: MwzL S406 89,0
Error in line 10: MwzL S339 84,9
